# security-gate

./: .env.example  .gitignore  FAIL-OPEN-AUDIT.md  HANDOVER.md  HARDENING-ROADMAP.md  README.md  SECURITY.md  TAINT_SCOPE.md  accepted-findings.toml  conftest.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
scripts/: fleet-status.sh
scripts/repin/: .gitignore  README.md  findings_diff.py  make_fixtures.py  repin.sh  run_fixtures.sh
security_gate/: accepted.py  cli.py  sbom.py
security_gate/dast/: __init__.py  scanner.py
security_gate/dast/fixtures/: probes.jsonl
security_gate/report/: generator.py
security_gate/rules/: semgrep_rules.yml
security_gate/scanner/: __init__.py  ai_ml.py  bare_suppress.py  base.py  cmd_injection.py  crypto.py  deps.py  git_history.py  hardcoded_timeout.py  llm_injection.py  outbound.py  path_manip.py  pickle_usage.py  retention.py  sca.py  secrets.py  security_tool.py  semgrep_scanner.py  ssrf.py  ssti.py  validation.py  web_app.py
tests/: test_accepted.py  test_dast.py  test_fail_open.py  test_scanners.py
tests/fixtures/: clean.py  clean.ts  has_ai_ml.py  has_cmd_injection.py  has_crypto.ts  has_llm_injection.py  has_outbound.py  has_path_manip.py  has_retention.py  has_secrets.py  has_security_tool.py  has_semgrep_taint.py  has_ssrf.py  has_ssti.py  has_validation.py  has_web_app.py
