[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-gate"
version = "0.1.0"
description = "Static security gate scanner for Python security projects — catches outbound API leakage, path manipulation, unpinned deps, hardcoded secrets, missing retention policy, and unvalidated input."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "LeightonSec" }]
keywords = ["security", "static-analysis", "devsecops", "cybersecurity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "httpx>=0.27.0",
]

[project.scripts]
security-gate = "security_gate.cli:app"

[project.urls]
Homepage = "https://github.com/LeightonSec/security-gate"
Issues = "https://github.com/LeightonSec/security-gate/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["security_gate*"]

[tool.setuptools.package-data]
security_gate = ["dast/fixtures/*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*", "security_gate/cli.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]
